fix(ui): add support for themeing name inputs
name input background and text colour now use themes to fix text in dark
theme being unreadable

--- a/src/styles.css
+++ b/src/styles.css
@@ -194,6 +194,8 @@ header {
   width: 20rem;
   border: 0.5rem solid var(--button-border);
   font-size: 2rem;
+  background-color: var(--button-background);
+  color: var(--button-text); 
 }
 
 .row-2 {
